--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="sty.css?version=5" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://astarter.io/assets/System/View/css/style.css?ver202204031735">
+<link rel="stylesheet" href="https://astarter.io/assets/System/View/bootstrap4/css/bootstrap-grid.min.css">
+<link rel="stylesheet" href="https://astarter.io/assets/System/View/css/responsive.css?ver202204031735">
+<link rel="stylesheet" href="https://astarter.io/assets/System/View/css/index.css?ver202204031735">
+<link rel="stylesheet" href="https://astarter.io/assets/System/View/css/en.css">
+<link rel="stylesheet" href="https://astarter.io/assets/System/View/css/animate.min.css">
+<link rel="stylesheet" href="https://astarter.io/assets/System/View/js/slick/slick.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  </head>
+  <body>
+    <header class="top-nav top-nav-bar wow fadeIn" data-section="" style="visibility: visible; animation-name: fadeIn;" data-menu="0">
+    <div class="frame-wide tn-menu row-nav h-100 flex-cb">
+    <div class="top-nav-logo">
+    <h1>
+    <a href="/">
+    <img class="logo-color" src="https://astarter.io/uploads/image/logo/color.png" alt="ASTARTER">
+    <img class="logo-white" src="https://astarter.io/uploads/image/logo/color.png" alt="ASTARTER">
+    </a>
+    </h1>
+    </div>
+    <div class="main-nav-bar" data-menu="top-menu-hover">
+    <div class="top-nav-menu" data-menu="top-menu-hover">
+    <div class="flex-ce">
+    <dl data-left="0" data-width="121" class="">
+    <dt>
+    <a href="/#1.html" data-id="1">
+    <span><em>Launch app</em></span>
+    </a>
+    </dt>
+    </dl>
+    </div>
+    </div>
+    </div>
+    <div class="tnb-link">
+    <a href="https://astarter-1.gitbook.io/welcome-to-astarter/technical-paper/1-launchpad" class="btn-normal bg-primary fs-16" target="_blank">Launch app</a>
+    </div>
+    <button type="button" class="top-toggle-nav" data-action="top-nav-toggle">
+    <span class="">
+    <i class="icon-menu"></i>
+    <i class="icon-menu-close"></i>
+    </span>
+    </button>
+    </div>
+    </header>
+
+    <section class="banner-wrapper top-banner wow fadeIn" data-id="1" style="visibility: visible; animation-name: fadeIn;">
+    <div class="hb-slides bgs-cover" style="">
+    <ul class="hbs-list mb-4" style="margin-bottom:1rem;">
+    <li>
+    <div class="hbs-info abs h-100 flex-cc">
+    <div class="hbsi-con pt-3 text-center frame-wide">
+    <h3 class="hbsi-title strong fs-60 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">DeFi Infrastructure Hub on Cardano</h3>
+    <h4 class="hbsi-sub fs-24 wow fadeInUp" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Native Launchpad Countdown to Open Beta</h4>
+
+    <div class="hbsi-btn flex-cc fs-16 wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
+<div class="time ">
+<span>
+ <div id="d">12</div>
+ Days
+</span>
+<span>
+ <div id="h">06</div>
+ Hours
+</span>
+<span>
+ <div id="m">35</div>
+ Minutes
+</span>
+<span>
+ <div id="s">54</div>
+ Seconds
+</span>
+</div>
+
+    </div>
+    </div>
+    </div>
+    <img src="https://astarter.io/uploads/image/banenr/banner-1.png?ver202204011010" alt="ASTARTER" style="width:100%;height:auto;" class="d-none d-md-block">
+    </li>
+    </ul>
+    </div>
+
+    </section>
+  
+    <script src="countdown.js"></script>
+  </body>
+</html>
+
