--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://astarter.io/assets/System/View/js/slick/slick.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  </head>
+   </head>
   <body>
     <header class="top-nav top-nav-bar wow fadeIn" data-section="" style="visibility: visible; animation-name: fadeIn;" data-menu="0">
     <div class="frame-wide tn-menu row-nav h-100 flex-cb">
@@ -39,7 +39,7 @@
     </div>
     </div>
     <div class="tnb-link">
-    <a href="https://astarter-1.gitbook.io/welcome-to-astarter/technical-paper/1-launchpad" class="btn-normal bg-primary fs-16" target="_blank">Launch app</a>
+    <a href="" class="btn-normal bg-primary fs-16" target="_blank">Open Beta</a>
     </div>
     <button type="button" class="top-toggle-nav" data-action="top-nav-toggle">
     <span class="">
@@ -56,8 +56,8 @@
     <li>
     <div class="hbs-info abs h-100 flex-cc">
     <div class="hbsi-con pt-3 text-center frame-wide">
-    <h3 class="hbsi-title strong fs-60 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">DeFi Infrastructure Hub on Cardano</h3>
-    <h4 class="hbsi-sub fs-24 wow fadeInUp" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Native Launchpad Countdown to Open Beta</h4>
+    <h3 class="hbsi-title strong fs-60 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">Native Launchpad on Cardano.</h3>
+    <h4 class="hbsi-sub fs-24 wow fadeInUp" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Countdown to Open Beta</h4>
 
     <div class="hbsi-btn flex-cc fs-16 wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
 <div class="time ">
@@ -88,8 +88,46 @@
     </div>
 
     </section>
-  
+  <section class="main-footer wow fadeIn bgs-cover" style="visibility: visible; animation-name: fadeIn;">
+  <div class="frame-wide mf-container">
+  <div class="mfc-con flex-sb">
+  <dl class="mfc-info">
+  <dt class="mfci-logo"><img src="https://astarter.io/uploads/image/logo/color.png" alt="logo"></dt>
+  <dd class="mfci-txt fs-16 muted mt-3">A key DeFi infrastructure hub on Cardano that features four core applications: Launchpad, DEX, Money Market &amp; Tech Service, with the backing of EMURGO, a founding member of the Cardano protocol.</dd>
+  </dl>
+  <div class="mfc-nav d-flex">
+  <dl class="mfcn-item">
+  <dt class="mfcn-title fs-16 strong nowrap">Astarter</dt>
+  <dd class="mfcn-list fs-16">
+  <a href="https://astarter-1.gitbook.io/welcome-to-astarter/technical-paper/1-launchpad" target="_blank">LaunchPad</a>
+  <a href="https://astarter-1.gitbook.io/welcome-to-astarter/2-dex-adex" target="_blank">DEX</a>
+  <a href="https://astarter-1.gitbook.io/welcome-to-astarter/3-money-market" target="_blank">Money Market</a>
+  <a href="https://astarter-1.gitbook.io/welcome-to-astarter/4-tech-service" target="_blank">Tech Service</a>
+  </dd>
+  </dl>
+  <dl class="mfcn-item">
+  <dt class="mfcn-title fs-16 strong nowrap">About</dt>
+  <dd class="mfcn-list fs-16">
+  <a href="https://astarter-1.gitbook.io/welcome-to-astarter/" target="_blank">Docs</a>
+  <a href="mailto: contact@astarter.io" target="_blank">Contact</a>
+  <a href="mailto: support@astarter.io" target="_blank">Tech Support</a>
+  <a href="https://astarter-1.gitbook.io/welcome-to-astarter/getting-started" target="_blank">Get Started</a>
+  </dd>
+  </dl>
+  <dl class="mfcn-item">
+  <dt class="mfcn-title fs-16 strong nowrap">Community</dt>
+  <dd class="mfcn-list fs-16">
+  <a href="https://twitter.com/Astarter_Pad" target="_blank">Twitter</a>
+  <a href="https://t.me/astartergroup" target="_blank">Telegram</a>
+  <a href="https://medium.com/@Astarter_Pad" target="_blank">Medium</a>
+  <a href="https://www.youtube.com/channel/UCvgyIH-AhzehGy5DYDoL9jw" target="_blank">YouTube</a>
+  <a href="https://discord.gg/6s2GjWX6s4" target="_blank">Discord</a>
+  </dd>
+  </dl>
+  </div>
+  </div>
+  </div>
+  </section>
     <script src="countdown.js"></script>
   </body>
 </html>
-
