--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title></title>
     <link href="sty.css?version=5" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://astarter.io/assets/System/View/css/style.css?ver202204031735">
