--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-  
-
- 
+<html lang="en" class="windows x86 js desktop home   win7up x64">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
+
+
 <meta charset="utf-8">
 <meta name="renderer" content="webkit">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -30,6 +32,7 @@
 <link rel="stylesheet" href="http://astarter.io/assets/System/View/css/responsive.css?ver202204031735">
 <link rel="stylesheet" href="http://astarter.io/assets/System/View/css/en.css">
 <link rel="stylesheet" href="http://astarter.io/assets/System/View/css/animate.min.css">
+<link href="sty.css?version=5" rel="stylesheet" type="text/css"/>
 <script src="http://astarter.io/en/inc.config.js"></script>
 <script src="http://astarter.io/assets/System/View/js/jquery/jquery-2.1.3.min.js"></script>
 <script src="http://astarter.io/assets/System/View/js/slick/slick.min.js"></script>
@@ -39,7 +42,6 @@
 ASTARTER
 </title>
 </head>
-
   <body class data-page="" data-screen="lg xs">
     <header class="top-nav top-nav-bar wow fadeIn" data-section="" style="visibility: visible; animation-name: fadeIn;" data-menu="0">
     <div class="frame-wide tn-menu row-nav h-100 flex-cb">
