--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@ ASTARTER
     <div class="top-nav-logo">
     <h1>
     <a href="/">
-    <img class="logo-color" src="https://astarter.io/uploads/image/logo/color.png" alt="ASTARTER">
-    <img class="logo-white" src="https://astarter.io/uploads/image/logo/color.png" alt="ASTARTER">
-    </a>
+    <img class="logo-color" src="https://astarter.io/uploads/image/logo/color.png" alt="ASTARTER"></a>
     </h1>
     </div>
     <div class="main-nav-bar" data-menu="top-menu-hover">
