--- a/index.html
+++ b/index.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="windows x86 js desktop home   win7up x64">
+
+   
+
+
+
+  
   <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link href="sty.css?version=5" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" href="https://astarter.io/assets/System/View/css/style.css?ver202204031735">
+<meta charset="utf-8">
+<meta name="renderer" content="webkit">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="author" content="Powered By http://astarter.app">
+<meta name="copyright" content="©2019 – All Rights Reserved By http://astarter.io">
+<meta name="keywords" content="ASTARTER">
+<meta name="description" content="Astarter provides fair, safe, and accessible open finance services on Cardano, developing decentralized finance applications for the Cardano ecosystem...">
+<meta name="format-detection" content="telephone=no">
+<meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
+<meta property="og:url" content="http://astarter.app/">
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://astarter.io/uploads/image/logo/astarter.io_thumbs.png">
+<meta property="og:title" content="ASTARTER">
+<meta property="og:description" content="Astarter provides fair, safe, and accessible open finance services on Cardano, developing decentralized finance applications for the Cardano ecosystem.">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="tw:title" content="ASTARTER">
+<meta name="twitter:description" content="Astarter provides fair, safe, and accessible open finance services on Cardano, developing decentralized finance applications for the Cardano ecosystem.">
+<meta name="twitter:image" content="https://astarter.io/uploads/image/logo/astarter.io_thumbs.png">
+ <link href="sty.css?version=5" rel="stylesheet" type="text/css"/>
+<link rel="shortcut icon" href="https://astarter.io/assets/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://astarter.io/assets/System/View/bootstrap4/css/bootstrap-grid.min.css">
-<link rel="stylesheet" href="https://astarter.io/assets/System/View/css/responsive.css?ver202204031735">
+<link rel="stylesheet" href="https://astarter.io/assets/System/View/js/slick/slick.css">
+<link rel="stylesheet" href="https://astarter.io/assets/System/View/css/style.css?ver202204031735">
 <link rel="stylesheet" href="https://astarter.io/assets/System/View/css/index.css?ver202204031735">
+<link rel="stylesheet" href="https://astarter.io/assets/System/View/css/responsive.css?ver202204031735">
 <link rel="stylesheet" href="https://astarter.io/assets/System/View/css/en.css">
 <link rel="stylesheet" href="https://astarter.io/assets/System/View/css/animate.min.css">
-<link rel="stylesheet" href="https://astarter.io/assets/System/View/js/slick/slick.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-   </head>
+<script src="https://astarter.io/en/inc.config.js"></script>
+<script src="https://astarter.io/assets/System/View/js/jquery/jquery-2.1.3.min.js"></script>
+<script src="https://astarter.io/assets/System/View/js/slick/slick.min.js"></script>
+<script src="https://astarter.io/assets/System/View/js/libs/pack.js"></script>
+<script>var $sModule='home',$sDevice='desktop',$sAction='',$isPhone=$sDevice=='phone';</script>
+<title>
+ASTARTER
+</title>
+</head>  
+  
   <body>
     <header class="top-nav top-nav-bar wow fadeIn" data-section="" style="visibility: visible; animation-name: fadeIn;" data-menu="0">
     <div class="frame-wide tn-menu row-nav h-100 flex-cb">
