--- a/index.html
+++ b/index.html
@@ -90,7 +90,24 @@ ASTARTER
     <h4 class="hbsi-sub fs-24 wow fadeInUp" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Countdown to Open Beta</h4>
 
     <div class="hbsi-btn flex-cc fs-16 wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-
+<div class="time ">
+<span>
+ <div id="d">12</div>
+ Days
+</span>
+<span>
+ <div id="h">06</div>
+ Hours
+</span>
+<span>
+ <div id="m">35</div>
+ Minutes
+</span>
+<span>
+ <div id="s">54</div>
+ Seconds
+</span>
+</div>
 
     </div>
     </div>
