--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta charset="utf-8">
 <meta name="renderer" content="webkit">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<meta name="author" content="Powered By http://astarter.app">
+<meta name="author" content="Astarter Countdown to Open Deta">
 <meta name="copyright" content="©2019 – All Rights Reserved By http://astarter.io">
 <meta name="keywords" content="ASTARTER">
 <meta name="description" content="Astarter provides fair, safe, and accessible open finance services on Cardano, developing decentralized finance applications for the Cardano ecosystem...">
