--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="tw:title" content="ASTARTER">
 <meta name="twitter:description" content="Astarter provides fair, safe, and accessible open finance services on Cardano, developing decentralized finance applications for the Cardano ecosystem.">
-<meta name="twitter:image" content="https://astarter.io/uploads/image/logo/astarter.io_thumbs.png">
+<meta name="twitter:image" content="astarter.app_thumbs.png">
  <link href="sty.css?version=5" rel="stylesheet" type="text/css"/>
 <link rel="shortcut icon" href="https://astarter.io/assets/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://astarter.io/assets/System/View/bootstrap4/css/bootstrap-grid.min.css">
