--- a/ct.htm
+++ b/ct.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="windows x86 js desktop home   win7up x64">
 <head>
+<link href="sty.css?version=1" rel="stylesheet" type="text/css"/>
 <title>
 Countdown
 </title>
