--- a/ct.htm
+++ b/ct.htm
@@ -10,20 +10,7 @@ Countdown
 
 <div class="time ">
 <span>
- <div id="d">12</div>
- Days
-</span>
-<span>
- <div id="h">06</div>
- Hours
-</span>
-<span>
- <div id="m">35</div>
- Minutes
-</span>
-<span>
- <div id="s">54</div>
- Seconds
+ Open Beta
 </span>
 </div>
 
