--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ ASTARTER
     <div class="flex-ce">
     <dl data-left="0" data-width="121" class="">
     <dt>
-    <a href="/#1.html" data-id="1">
+    <a href="https://testnet.atest.info" data-id="1">
     <span><em>Launch app</em></span>
     </a>
     </dt>
