--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ ASTARTER
     </div>
     </div>
     <div class="tnb-link">
-    <a href="" class="btn-normal bg-primary fs-16" target="https://testnet.atest.info">Open Beta...</a>
+    <a href="https://testnet.atest.info" class="btn-normal bg-primary fs-16" target="_blank">Open Beta...</a>
     </div>
     <button type="button" class="top-toggle-nav" data-action="top-nav-toggle">
     <span class="">
