--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ ASTARTER
     <div class="flex-ce">
     <dl data-left="0" data-width="121" class="">
     <dt>
-    <a href="https://testnet.atest.info" data-id="1">
+    <a href="https://testnet.aatest.info" data-id="1">
     <span><em>Launch app</em></span>
     </a>
     </dt>
@@ -69,7 +69,7 @@ ASTARTER
     </div>
     </div>
     <div class="tnb-link">
-    <a href="https://testnet.atest.info" class="btn-normal bg-primary fs-16" target="_blank">Open Beta...</a>
+    <a href="https://testnet.aatest.info" class="btn-normal bg-primary fs-16" target="_blank">Open Beta</a>
     </div>
     <button type="button" class="top-toggle-nav" data-action="top-nav-toggle">
     <span class="">
@@ -87,24 +87,24 @@ ASTARTER
     <div class="hbs-info abs h-100 flex-cc">
     <div class="hbsi-con pt-3 text-center frame-wide">
     <h3 class="hbsi-title strong fs-60 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">DeFi Infrastructure Hub on Cardano</h3>
-    <h4 class="hbsi-sub fs-24 wow fadeInUp" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Countdown to Open Beta</h4>
+    <h4 class="hbsi-sub fs-24 wow fadeInUp" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">pen Beta is live!</h4>
 
     <div class="hbsi-btn flex-cc fs-16 wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
 <div class="time ">
 <span>
- <div id="d">12</div>
+ <div id="d">00</div>
  Days
 </span>
 <span>
- <div id="h">06</div>
+ <div id="h">00</div>
  Hours
 </span>
 <span>
- <div id="m">35</div>
+ <div id="m">00</div>
  Minutes
 </span>
 <span>
- <div id="s">54</div>
+ <div id="s">00</div>
  Seconds
 </span>
 </div>
@@ -158,6 +158,6 @@ ASTARTER
   </div>
   </div>
   </section>
-    <script src="countdown.js"></script>
+  
   </body>
 </html>
