--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ ASTARTER
     <div class="hbs-info abs h-100 flex-cc">
     <div class="hbsi-con pt-3 text-center frame-wide">
     <h3 class="hbsi-title strong fs-60 wow fadeInUp" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">DeFi Infrastructure Hub on Cardano</h3>
-    <h4 class="hbsi-sub fs-24 wow fadeInUp" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">pen Beta is live!</h4>
+    <h4 class="hbsi-sub fs-24 wow fadeInUp" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Open Beta is live!</h4>
 
     <div class="hbsi-btn flex-cc fs-16 wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
 <div class="time ">
