--- a/test.htm
+++ b/test.htm
@@ -9,7 +9,9 @@
   </head>
   <body>
 
-  
+<div class="page">
+  Countdown to 
+</div?
  
 <div class="time ">
 <span>
@@ -32,8 +34,6 @@
     </div>
     </div>
     </div>
-    </li>
-    </ul>
     </div>
 
  
