--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 <div class="nft">
 <br>
-  Opens: Nov 1, 2024 ,10:00 UTC 
+  OPENS: Nov 1, 2024 ,10:00 UTC 
  <br> 
 </div>
 
@@ -43,4 +43,3 @@
     <script src="countdown.js"></script>
   </body>
 </html>
-hello world
