--- a/nft/nft.htm
+++ b/nft/nft.htm
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="sty.css?version=7" rel="stylesheet" type="text/css"/>
 
+
+  </head>
+  <body>
+<div class="nft">
+<br>
+ Opens Nov 1, 2023, 10:00:00 UTC
+ <br> 
+</div>
+
+ 
+<div class="time ">
+<span>
+ <div id="d">12</div>
+ Days
+</span>
+<span>
+ <div id="h">06</div>
+ Hours
+</span>
+<span>
+ <div id="m">35</div>
+ Minutes
+</span>
+<span>
+ <div id="s">54</div>
+ Seconds
+</span>
+</div>
+    </div>
+    </div>
+    </div>
+    </div>
+
+ 
+  
+    <script src="countdown.js"></script>
+  </body>
+</html>
