--- a/nft/nft.htm
+++ b/nft/nft.htm
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link href="sty.css?version=7" rel="stylesheet" type="text/css"/>
+    <link href="https://astarter.app/sty.css?version=7" rel="stylesheet" type="text/css"/>
 
 
   </head>
@@ -40,6 +40,6 @@
 
  
   
-    <script src="countdown.js"></script>
+    <script src="https:.astarter.app/countdown.js"></script>
   </body>
 </html>
