--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Astarter App Redirct to https://astarter.io</title>
+   <meta http-equiv="refresh" content="0; URL=https://astarter.io/">
+   <link rel="canonical" href="https://astarter.io/">
+
+    
+    
     <link href="sty.css?version=7" rel="stylesheet" type="text/css"/>
 
 
