--- a/nft/index.htm
+++ b/nft/index.htm
@@ -40,6 +40,6 @@
 
  
   
-    <script src="https:.astarter.app/countdown.js"></script>
+    <script src="https://astarter.app/countdown.js"></script>
   </body>
 </html>
