--- a/nft/index.htm
+++ b/nft/index.htm
@@ -9,6 +9,7 @@
   </head>
   <body>
     <!-- illustration sub id starts -->
+     <div id="logo">
         <div id="illustration">
 <div class="nft">
 <br>
@@ -45,7 +46,7 @@
         
         </div>
         <!-- illustration sub id ends -->
- 
+  </div>
   
     <script src="https://astarter.app/countdown.js"></script>
   </body>
