--- a/nft/index.htm
+++ b/nft/index.htm
@@ -12,7 +12,7 @@
          <!-- illustration sub id starts -->
         <div id="illustration">
             
-          <img src="https://astarter.app_thumbs.png" alt="Astarter" id="logo">
+          <img src="https://astarter.app/astarter.app_thumbs.png" alt="Astarter" id="logo">
         
         </div>
         <!-- illustration sub id ends -->  
