--- a/nft/index.htm
+++ b/nft/index.htm
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-        
+  div id="logo">      
 <div class="nft">
 <br>
    
@@ -17,7 +17,7 @@
   
      <br> 
 </div>
-
+  </div>
  
 <div class="time ">
 <span>
