--- a/nft/index.htm
+++ b/nft/index.htm
@@ -7,8 +7,7 @@
 
 
   </head>
-  <body>
-
+  <div class="body">
   <div id="logo">      
 <div class="nft">
 <br>
@@ -55,5 +54,5 @@
         illustration sub id ends -->  
        
   </div>
-  </body>
+  </div>
 </html>
