--- a/nft/index.htm
+++ b/nft/index.htm
@@ -7,10 +7,10 @@
 
 
   </head>
-  <div class="body">
+<body>
+  <div class="center">
   <div id="logo">      
-<div class="nft">
-<br>
+<div class="nft"><br>
    
  Opens Nov 1, 2023, 10:00:00 UTC
   
@@ -54,5 +54,6 @@
         illustration sub id ends -->  
        
   </div>
-  </div>
+</div>
+</body>
 </html>
