--- a/nft/index.htm
+++ b/nft/index.htm
@@ -9,40 +9,32 @@
   </head>
 <body>
  
-  <div id="logo">    
-    
-    
-<div class="center">
-<div class="nft"><br>
-   
- Opens Nov 1, 2023, 10:00:00 UTC
-  
-     <br> 
-</div>
+<div id="logo">    
+  <div class="center">
 
- 
-<div class="time ">
-<span>
- <div id="d">12</div>
- Days
-</span>
-<span>
- <div id="h">06</div>
- Hours
-</span>
-<span>
- <div id="m">35</div>
- Minutes
-</span>
-<span>
- <div id="s">54</div>
- Seconds
-</span>
+    <div class="nft"><br>Opens Nov 1, 2023, 10:00:00 UTC<br></div>
+    <div class="time ">
+      <span>
+        <div id="d">12</div>
+        Days
+      </span>
+      <span>
+        <div id="h">06</div>
+        Hours
+      </span>
+      <span>
+        <div id="m">35</div>
+        Minutes
+      </span>
+      <span>
+        <div id="s">54</div>
+        Seconds
+      </span>
+    </div>
+  </div>
 </div>
-    </div>
-    </div>
-    </div>
-    </div>
+</div>
+</div>
 
   
     <script src="https://astarter.app/countdown.js"></script>
