--- a/nft/index.htm
+++ b/nft/index.htm
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link href="https://astarter.app/sty.css?version=13" rel="stylesheet" type="text/css"/>
+    <link href="https://astarter.app/sty.css?version=14" rel="stylesheet" type="text/css"/>
 
 
   </head>
@@ -12,7 +12,12 @@
 <div id="logo">    
   <div class="center">
 
-    <div class="nft"><br>Opens Nov 1, 2023, 10:00:00 UTC<br></div>
+    <div class="nft">
+      <br>
+      Opens Nov 1, 2023, 10:00:00 UTC
+      <br>
+    </div>
+    
     <div class="time ">
       <span>
         <div id="d">12</div>
