--- a/nft/index.htm
+++ b/nft/index.htm
@@ -8,14 +8,15 @@
 
   </head>
 <body>
- 
+ <div class="center">
 <div id="logo">    
-  <div class="center">
+  
 
-    
+    <div class="nft">
       <br>
       Opens Nov 1, 2023, 10:00:00 UTC
       <br>
+    </div>
   
     
     <div class="time ">
