--- a/nft/index.htm
+++ b/nft/index.htm
@@ -21,7 +21,7 @@
     
     <div class="time ">
       <span>
-        <div id="d">12</div>
+        <div id="d"></div>
         Days
       </span>
       <span>
