--- a/nft/index.htm
+++ b/nft/index.htm
@@ -21,8 +21,8 @@
     
     <div class="time ">
       <span>
-        <div id="d"></div>
-        Days
+        <div id="d">12</div>
+       <center>Days</center>
       </span>
       <span>
         <div id="h">06</div>
