--- a/nft/index.htm
+++ b/nft/index.htm
@@ -26,15 +26,15 @@
       </span>
       <span>
         <div id="h">06</div>
-        Hours
+       <center>Hours</center>
       </span>
       <span>
         <div id="m">35</div>
-        Minutes
+        <center>Minutes</center>
       </span>
       <span>
         <div id="s">54</div>
-        Seconds
+        <center>Seconds</center>
       </span>
     </div>
   </div>
