--- a/nft/test.htm
+++ b/nft/test.htm
@@ -1,4 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="https://astarter.app/sty.css?version=18" rel="stylesheet" type="text/css"/>
 
+
+  </head>
+<body>
+ <div class="center">
+<div id="logo">    
+  
+
+    <div class="nft">
+      <br>
+     
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaNTx_ivxA_bfRfkxymDYqmpy5uHrVaDGNfQF8MXYQUEEKUw/viewform?embedded=true" width="640" height="419" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+      <br>
+    </div>
+  
+   
+  </div>
+</div>
+
+
+  
+  
+ 
+        <!-- illustration sub id starts
+        <div id="illustration">
+
+
+          <img src="https://astarter.app/astarter.app_thumbs.png" alt="Astarter" id="logo">
+
+        </div>
+        illustration sub id ends -->  
+       
+ 
+</body>
+</html>
 
 
 
