--- a/nft/index.htm
+++ b/nft/index.htm
@@ -13,8 +13,8 @@
   
 
     <div class="nft">
+      NFT Form 
       <br>
-       NFT Form <br>
       Opens Nov 1, 2023, 10:00:00 UTC
       <br>
     </div>
