--- a/index.html
+++ b/index.html
@@ -15,36 +15,12 @@
   <body>
 <div class="nft">
 <br>
- Opens Nov 1, 2023, 10:00:00 UTC
+ IF you are not automatically redirected click here <a href=https://astarter.io>Astarter.io </a>
  <br> 
 </div>
 
- 
-<div class="time ">
-<span>
- <div id="d">12</div>
- Days
-</span>
-<span>
- <div id="h">06</div>
- Hours
-</span>
-<span>
- <div id="m">35</div>
- Minutes
-</span>
-<span>
- <div id="s">54</div>
- Seconds
-</span>
-</div>
-    </div>
-    </div>
-    </div>
-    </div>
 
- 
   
-    <script src="countdown.js"></script>
+ 
   </body>
 </html>
