--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
 <div class="nft">
 <br>
- IF you are not automatically redirected click here <a href=https://astarter.io>Astarter.io </a>
+< href=https://astarter.io> IF you are not automatically redirected click here Astarter.io </a>
  <br> 
 </div>
 
