--- a/nft/index.htm
+++ b/nft/index.htm
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>AWL NFTs</title>
+ <meta http-equiv="refresh" content="5; URL=https://astarter.io/">
     <link href="https://astarter.app/sty.css?version=18" rel="stylesheet" type="text/css"/>
 
 
@@ -15,35 +16,18 @@
     <div class="nft">
      
       <br>
-      Opens Nov 1, 2023, 10:00:00 UTC
+     < href=https://nft.astarter.app> IF you are not automatically redirected click here</a>
       <br>
     </div>
   
     
-    <div class="time ">
-      <span>
-        <div id="d">00</div>
-       <center>Days</center>
-      </span>
-      <span>
-        <div id="h">00</div>
-       <center>Hours</center>
-      </span>
-      <span>
-        <div id="m">00</div>
-        <center>Minutes</center>
-      </span>
-      <span>
-        <div id="s">00</div>
-        <center>Seconds</center>
-      </span>
-    </div>
+  
   </div>
 </div>
 
 
   
-    <script src="https://astarter.app/countdown.js"></script>
+  
  
         <!-- illustration sub id starts
         <div id="illustration">
