--- a/nft/index.htm
+++ b/nft/index.htm
@@ -16,7 +16,7 @@
     <div class="nft">
      
       <br>
-     < href=https://nft.astarter.app> IF you are not automatically redirected click here</a>
+     <a href=https://nft.astarter.app> IF you are not automatically redirected click here</a>
       <br>
     </div>
   
