--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
 <div class="nft">
 <br>
-< href=https://astarter.io> IF you are not automatically redirected click here Astarter.io </a>
+<a href=https://astarter.io> IF you are not automatically redirected click here Astarter.io </a>
  <br> 
 </div>
 
