--- a/nft/index.htm
+++ b/nft/index.htm
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>AWL NFTs</title>
- <meta http-equiv="refresh" content="5; URL=https://astarter.io/">
+ <meta http-equiv="refresh" content="5; URL=https://nft.astarter.app/">
     <link href="https://astarter.app/sty.css?version=18" rel="stylesheet" type="text/css"/>
 
 
@@ -16,7 +16,7 @@
     <div class="nft">
      
       <br>
-     <a href=https://nft.astarter.app> IF you are not automatically redirected click here</a>
+     <a href="https://nft.astarter.app"> IF you are not automatically redirected click here</a>
       <br>
     </div>
   
