--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -1,7 +1,13 @@
 <!--
 https://github.com/andreruffert/scratchie.js
 -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>   
+    <link href="scratch.css?version=1" rel="stylesheet" type="text/css"/>
 
+  </head>
+  <body>
 <div class="container" id="js-container">
   <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
   <form class="form" style="visibility: hidden;">
@@ -17,3 +23,4 @@ https://github.com/andreruffert/scratchie.js
     </div>
   </form>  
 </div>
+  </body>
