--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -11,9 +11,9 @@ https://github.com/andreruffert/scratchie.js
 <div class="container" id="js-container">
   <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
   <form class="form" style="visibility: hidden;">
-    <h2>'Allo, 'Allo!</h2>
-    <h3>The secret code is:</h3>
-    <h1><code>HlkafSYc</code></h1>
+    <h2>'Woot, 'Woot!</h2>
+    <h3>The AWL code is:</h3>
+    <h1><code>AAWL1</code></h1>
     <div>
       <input type="text" name="code" placeholder="Secret Code">
     </div>
