--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -15,11 +15,12 @@ https://github.com/andreruffert/scratchie.js
     <h3>The AWL code is:</h3>
     <h1><code>AAWL1</code></h1>
     <div>
-      <input type="text" name="code" placeholder="Secret Code">
+    
     </div>
     <br>
     <div>
-      <input type="submit" value="Submit">
+<a href="https://nft.astarter.app/#benefits"><input type="submit" value="Submit"></a>
+     
     </div>
   </form>  
 </div>
