--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -10,7 +10,7 @@ https://github.com/andreruffert/scratchie.js
   <body>
 <div class="container" id="js-container">
   <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
-  <form class="form" style="visibility: hidden;">
+ 
     <h2>'Woot, 'Woot!</h2>
     <h3>The AWL code is:</h3>
     <h1><code>AAWL1</code></h1>
@@ -19,10 +19,10 @@ https://github.com/andreruffert/scratchie.js
     </div>
     <br>
     <div>
-<a href="https://nft.astarter.app/#benefits"><input type="submit" value="Submit"></a>
+<a href="https://nft.astarter.app/#benefits"><input type="submit" value="AWL Form"></a>
      
     </div>
-  </form>  
+
 </div>
      <script src="scratch.js"></script>
   </body>
