--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -14,13 +14,10 @@ https://github.com/andreruffert/scratchie.js
     <h2>'Woot, 'Woot!</h2>
     <h3>The AWL code is:</h3>
     <h1><code>AAWL1</code></h1>
- 
-    
-  
     <br>
-<a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
-
-    <div>  
+  <div class="button"> 
+     <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
+     
     </div>
 
 </div>
