--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -15,8 +15,8 @@ https://github.com/andreruffert/scratchie.js
     <h3>The AWL code is:</h3>
     <h1><code>AAWL1</code></h1>
     <br>
-  <div class="button"> 
-     <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
+  <div> 
+     <a class="buttpn" href="https://nft.astarter.app/#benefits"><button>AWL Form</button></a>
      
     </div>
 
