--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -16,7 +16,7 @@ https://github.com/andreruffert/scratchie.js
     <h1><code>AAWL1</code></h1>
     <br>
   <div> 
-     <a class="buttpn" href="https://nft.astarter.app/#benefits"><button>AWL Form</button></a>
+     <a class="buttpn" href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
      
     </div>
 
