--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -8,7 +8,13 @@ https://github.com/andreruffert/scratchie.js
 
   </head>
   <body>
-<div class="container" id="js-container">
+<script Language="JavaScript">
+var width=400;
+var height=300;
+self.moveTo((screen.availwidth-width)/2,(screen.availheight-height)/2);
+self.resizeTo(width,height);
+</script>
+    <div class="container" id="js-container">
   <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
    <div class="form">
     <h2>'Woot, 'Woot!</h2>
