--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -27,5 +27,6 @@ self.resizeTo(width,height);
     </div>
 
 </div>
-     <script src="scratch.js"></script>
+Scratch image to reveal AWL code
+      <script src="scratch.js"></script>
   </body>
