--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -8,12 +8,6 @@ https://github.com/andreruffert/scratchie.js
 
   </head>
   <body>
-<script Language="JavaScript">
-var width=400;
-var height=300;
-self.moveTo((screen.availwidth-width)/2,(screen.availheight-height)/2);
-self.resizeTo(width,height);
-</script>
     <div class="container" id="js-container">
   <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
    <div class="form">
@@ -26,7 +20,7 @@ self.resizeTo(width,height);
      
     </div>
 
-</div>
-Scratch image to reveal AWL code
+</div></div>
       <script src="scratch.js"></script>
+      Scratch image to reveal AWL code
   </body>
