--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -9,7 +9,7 @@ https://github.com/andreruffert/scratchie.js
   </head>
   <body>
     <div class="container" id="js-container">
-
+<img src="AWL CARDS (3).jpg"
    <div class="form">
     <h2>'Woot, 'Woot!</h2>
     <h3>The AWL code is:</h3>
