--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -8,7 +8,7 @@ https://github.com/andreruffert/scratchie.js
 
   </head>
   <body>
-    <div class="container" id="js-container">
+<div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
    <div class="form">
     <h2>'Woot, 'Woot!</h2>
@@ -18,7 +18,9 @@ https://github.com/andreruffert/scratchie.js
   <div> 
      <a class="buttpn" href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
   </div>
-</div></div>
+</div>
+  <div class="instruction"> Scratch image to reveal AWL code  </div>
+</div>
       <script src="scratch.js"></script>
       Scratch image to reveal AWL code
   </body>
