--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -16,7 +16,7 @@ https://github.com/andreruffert/scratchie.js
     <h1><code>AAWL1</code></h1>
     <br>
   <div> 
-     <a class="button" href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
+     <a ref="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
   </div>
 </div>
   <div class="instruction"> Scratch image to reveal AWL code  </div>
