--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -18,8 +18,8 @@ https://github.com/andreruffert/scratchie.js
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
   </div>
-</div>
-  <div class="instruction"> Scratch image to reveal AWL code  </div>
+
+  <div class="instruction"> Scratch image to reveal AWL code  </div></div>
 </div>
       <script src="scratch.js"></script>
  
