--- a/scratch/index.html
+++ b/scratch/index.html
@@ -19,10 +19,9 @@ https://github.com/andreruffert/scratchie.js
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
   </div>
 
-  <div class="instruction"> Scratch image to reveal AWL code <div class="form">
-    <h2>'Woot, 'Woot!</h2>
-    <h3>The AWL code is:</h3>
-    <h1><code>AAWL1</code></h1>
+  <div class="instruction"> <div class="form">
+<h3>Scratch image to reveal AWL code </h3>
+   <h3>Enter the code on the AWL Form</h3>
     <br>
   <div> </div> </div></div>
 </div>
