--- a/scratch/index.html
+++ b/scratch/index.html
@@ -20,8 +20,10 @@ https://github.com/andreruffert/scratchie.js
   </div>
 
   <div class="instruction"> <div class="form">
-<h4>Scratch image to reveal AWL code </h4>
-   <h4>Enter the code on the AWL Form</h4>
+<p>Bird AWL is limited edition Stake Multipler NFT</p>
+<h3>Instructions</h3>
+<h4>1) Scratch image to reveal AWL code </h4>
+   <h4>2) Enter the code on the AWL Form</h4>
     <br>
   <div> </div> </div></div>
 </div>
