--- a/scratch/index.html
+++ b/scratch/index.html
@@ -18,15 +18,15 @@ https://github.com/andreruffert/scratchie.js
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
   </div>
-
+</div>
   <div class="instruction"> <div class="form">
 <p>Bird AWL is limited edition Stake Multipler NFT</p>
 <h3>Instructions</h3>
 <h4>1) Scratch image to reveal AWL code </h4>
    <h4>2) Enter the code on the AWL Form</h4>
     <br>
-  <div> </div> </div></div>
-</div>
+ </div> </div></div>
+
       <script src="scratch.js"></script>
  
   </body>
