--- a/scratch/index.html
+++ b/scratch/index.html
@@ -10,7 +10,7 @@ https://github.com/andreruffert/scratchie.js
   <body>
 <div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
-   <div class="form">
+   <div class="reveal">
     <h2>'Woot, 'Woot!</h2>
     <h3>The AWL code is:</h3>
     <h1><code>AAWL1</code></h1>
