--- a/scratch/index.html
+++ b/scratch/index.html
@@ -11,14 +11,16 @@ https://github.com/andreruffert/scratchie.js
 <div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
    <div class="reveal">
-    <h2>'Woot, 'Woot!</h2>
+<div class="form">
+     <h2>'Woot, 'Woot!</h2>
     <h3>The AWL code is:</h3>
     <h1><code>AAWL1</code></h1>
     <br>
+
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
   </div>
-</div>
+</div></div>
   <div class="instruction"> <div class="form">
 <p>Bird AWL is limited edition Stake Multipler NFT</p>
 <h3>Instructions</h3>
