--- a/scratch/index.html
+++ b/scratch/index.html
@@ -13,14 +13,15 @@ https://github.com/andreruffert/scratchie.js
    <div class="reveal">
 <div class="form">
      <h2>'Woot, 'Woot!</h2>
-    <h3>The AWL code is:</h3>
-    <h1><code>AAWL1</code></h1>
-    <br>
+      <h1></h1>
+    <h3>The AWL code is:<code>AAWL1</code></h3>
+
+   <p>Bird AWL is limited edition Stake Multipler NFT</p>
 
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
   </div>
-<p>Bird AWL is limited edition Stake Multipler NFT</p>
+
 </div></div>
   <div class="instruction"> <div class="form">
 
