--- a/scratch/index.html
+++ b/scratch/index.html
@@ -13,10 +13,10 @@ https://github.com/andreruffert/scratchie.js
    <div class="reveal">
 <div class="form">
      <h2>'Woot, 'Woot!</h2>
-      <h1></h1>
-    <h3>The AWL code is:<code>AAWL1</code></h3>
-
-   <p>Bird AWL is limited edition Stake Multipler NFT</p>
+     <br>
+      <h3>The AWL code is:</h3>
+     <h1><code>AAWL1</code></h1
+   
 
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
@@ -24,7 +24,7 @@ https://github.com/andreruffert/scratchie.js
 
 </div></div>
   <div class="instruction"> <div class="form">
-
+<p>AWL NFTs are limited edition with Stake Multiplig Utility </p>
 <h3>Instructions</h3>
 <h4>1) Scratch image to reveal AWL code </h4>
    <h4>2) Enter the code on the AWL Form</h4>
