--- a/scratch/index.html
+++ b/scratch/index.html
@@ -15,8 +15,7 @@ https://github.com/andreruffert/scratchie.js
      <h2>'Woot, 'Woot!</h2>
      <br>
       <h3>The AWL code is:</h3>
-     <h1><code>AAWL1</code></h1
-   
+     <h1><code>AAWL1</code></h1>   
 
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
