--- a/scratch/index.html
+++ b/scratch/index.html
@@ -23,7 +23,7 @@ https://github.com/andreruffert/scratchie.js
 
 </div></div>
   <div class="instruction"> <div class="form">
-<p>AWL NFTs are limited edition with Stake Multiplig Utility </p>
+<p>AWL NFTs are limited edition with Stake Multipling Utility </p>
 <h3>Instructions</h3>
 <h4>1) Scratch image to reveal AWL code </h4>
    <h4>2) Enter the code on the AWL Form</h4>
