--- a/scratch/index.html
+++ b/scratch/index.html
@@ -23,10 +23,12 @@ https://github.com/andreruffert/scratchie.js
 
 </div></div>
   <div class="instruction"> <div class="form">
-<p>AWL NFTs are limited edition with Stake Multipling Utility </p>
+<p>AWL NFTs are limited edition with Stake Multipling and other Utility within the Astarter eco-system</p>
 <h3>Instructions</h3>
 <h4>1) Scratch image to reveal AWL code </h4>
    <h4>2) Enter the code on the AWL Form</h4>
+   <a href="https://nft.astarter.app">nft.astater.app</a>
+ 
     
  </div> </div></div>
 
