--- a/scratch/index.html
+++ b/scratch/index.html
@@ -23,11 +23,11 @@ https://github.com/andreruffert/scratchie.js
 
 </div></div>
   <div class="instruction"> <div class="form">
-<p>AWL NFTs are limited edition with Stake Multipling and other Utility within the Astarter eco-system</p>
+<p>AWL NFTs have utility within the Astarter eco-system</p>
 <h3>Instructions</h3>
 <h4>1) Scratch image to reveal AWL code </h4>
    <h4>2) Enter the code on the AWL Form</h4>
-   <a href="https://nft.astarter.app">nft.astater.app</a>
+   <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
  </div> </div></div>
