--- a/scratch/scratchie.html
+++ b/scratch/scratchie.html
@@ -10,17 +10,28 @@ https://github.com/andreruffert/scratchie.js
   <body>
 <div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
-   <div class="form">
-    <h2>'Woot, 'Woot!</h2>
-    <h3>The AWL code is:</h3>
-    <h1><code>AAWL1</code></h1>
-    <br>
+   <div class="reveal">
+<div class="form">
+     <h2>'Woot, 'Woot!</h2>
+     
+      <h3>The AWL code is:</h3>
+     <h1><code>AAWL1</code></h1>   
+
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
   </div>
 
-  <div class="instruction"> Scratch image to reveal AWL code  </div></div>
-</div>
+</div></div>
+  <div class="instruction"> <div class="form">
+<p>AWL NFTs have utility within the Astarter DeFi eco-system</p>
+<h3>Instructions</h3>
+<h4>1) Scratch image to reveal AWL code </h4>
+   <h4>2) Enter the code on the AWL Form</h4>
+   <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
+ 
+    
+ </div> </div></div>
+
       <script src="scratch.js"></script>
  
   </body>
