--- a/scratch/wise/index.html
+++ b/scratch/wise/index.html
@@ -32,6 +32,6 @@ https://github.com/andreruffert/scratchie.js
     
  </div> </div></div>
 
-      <script src="../scratch.js"></script>
+      <script src="wisescratch.js"></script>
  
   </body>
