--- a/scratch/wise/index.html
+++ b/scratch/wise/index.html
@@ -4,7 +4,7 @@ https://github.com/andreruffert/scratchie.js
 <!DOCTYPE html>
 <html lang="en">
   <head>   
-    <link href="../scratch.css?version=1" rel="stylesheet" type="text/css"/>
+    <link href="scratch.css?version=1" rel="stylesheet" type="text/css"/>
 
   </head>
   <body>
