--- a/scratch/cute/index.html
+++ b/scratch/cute/index.html
@@ -4,7 +4,7 @@ https://github.com/andreruffert/scratchie.js
 <!DOCTYPE html>
 <html lang="en">
   <head>   
-    <link href="../scratch.css?version=1" rel="stylesheet" type="text/css"/>
+    <link href="cutescratch.css?version=1" rel="stylesheet" type="text/css"/>
 
   </head>
   <body>
@@ -32,6 +32,6 @@ https://github.com/andreruffert/scratchie.js
     
  </div> </div></div>
 
-      <script src="../scratch.js"></script>
+      <script src="cutescratch.js"></script>
  
   </body>
