--- a/scratch/ice/index.html
+++ b/scratch/ice/index.html
@@ -4,7 +4,7 @@ https://github.com/andreruffert/scratchie.js
 <!DOCTYPE html>
 <html lang="en">
   <head>   
-    <link href="../scratch.css?version=1" rel="stylesheet" type="text/css"/>
+    <link href="icescratch.css?version=1" rel="stylesheet" type="text/css"/>
 
   </head>
   <body>
@@ -15,7 +15,7 @@ https://github.com/andreruffert/scratchie.js
      <h2>'Woot, 'Woot!</h2>
      
       <h3>The AWL code is:</h3>
-     <h1><code>AAWL1</code></h1>   
+     <h1><code>ICEAAWL</code></h1>   
 
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
@@ -26,12 +26,12 @@ https://github.com/andreruffert/scratchie.js
 
 <h3>Instructions</h3>
 <h4>1) Scratch image to reveal AWL code </h4>
-   <h4>2) Enter the code on the AWL Form</h4>
+   <h4>2) Enter the code and complete the AWL Form</h4>
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
  </div> </div></div>
 
-      <script src="../scratch.js"></script>
+      <script src="icescratch.js"></script>
  
   </body>
