--- a/scratch/ice/index.html
+++ b/scratch/ice/index.html
@@ -15,7 +15,7 @@ https://github.com/andreruffert/scratchie.js
      <h2>'Woot, 'Woot!</h2>
      
       <h3>The AWL code is:</h3>
-     <h1><code>ICEAAWL</code></h1>   
+     <h1><code>ICEAWL</code></h1>   
 
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
