--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -9,7 +9,7 @@ https://github.com/andreruffert/scratchie.js
  <link href="snow.css?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-<main>
+ 
   
 
     
@@ -34,9 +34,10 @@ https://github.com/andreruffert/scratchie.js
    <h4>2) Enter the code and complete the AWL Form</h4>
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
-    
+    <div id="snow-container" title="Click anywhere to remove snow">
+</div>
  </div> </div></div>
-</main>
+ 
 
       <script src="icescratch.js"></script>
       <script src="snow.js"></script>
