--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -9,7 +9,7 @@ https://github.com/andreruffert/scratchie.js
  <link href="snow.css?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
- 
+ <main>
   
 
 <div id="snow-container" title="Click anywhere to remove snow">    
@@ -41,5 +41,5 @@ https://github.com/andreruffert/scratchie.js
 
       <script src="icescratch.js"></script>
       <script src="snow.js"></script>
- 
+ </main>
   </body>
