--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -10,7 +10,8 @@ https://github.com/andreruffert/scratchie.js
   </head>
   <body>
 
-  
+  <div id="snow-container" title="Click anywhere to remove snow">
+</div>
 
   
   <div class="container" id="js-container">
