--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -11,7 +11,7 @@ https://github.com/andreruffert/scratchie.js
   <body>
 
   <div id="snow-container" title="Click anywhere to remove snow">
-</div>
+
 
   
   <div class="container" id="js-container">
@@ -32,12 +32,12 @@ https://github.com/andreruffert/scratchie.js
 
 <h3>Instructions</h3>
 <h4>1) Scratch image to reveal AWL code </h4>
-   <h4>2) Enter the code and complete the AWL Form</h4>
+   <h4>2) Enter the code on the AWL Form</h4>
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
 
- </div> </div></div>
+ </div> </div></div></div>
  
 
       <script src="icescratch.js"></script>
