--- a/scratch/ice/index.html
+++ b/scratch/ice/index.html
@@ -5,10 +5,12 @@ https://github.com/andreruffert/scratchie.js
 <html lang="en">
   <head>   
     <link href="icescratch.css?version=1" rel="stylesheet" type="text/css"/>
-
+ <link href="snow.css?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-<div class="container" id="js-container">
+<div id="snow-container" title="Click anywhere to remove snow">
+</div>
+    <div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
    <div class="reveal">
 <div class="form">
@@ -33,5 +35,5 @@ https://github.com/andreruffert/scratchie.js
  </div> </div></div>
 
       <script src="icescratch.js"></script>
- 
+  <script src="snow.js"></script>
   </body>
