--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -32,7 +32,7 @@ https://github.com/andreruffert/scratchie.js
 
 <h3>Instructions</h3>
 <h4>1) Scratch image to reveal AWL code </h4>
-   <h4>2) Enter the code on the AWL Form</h4>
+   <h4>2) Enter the code and complete the AWL Form</h4>
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
