--- a/scratch/ice/index.html
+++ b/scratch/ice/index.html
@@ -9,7 +9,7 @@ https://github.com/andreruffert/scratchie.js
   </head>
   <body>
 <div id="snow-container" title="Click anywhere to remove snow">
-</div>
+
     <div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
    <div class="reveal">
@@ -32,7 +32,7 @@ https://github.com/andreruffert/scratchie.js
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
- </div> </div></div>
+ </div> </div></div></div>
 
       <script src="icescratch.js"></script>
   <script src="snow.js"></script>
